infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: auth-app
          # image: gauri65/auth:latest
          image: asia-south1-docker.pkg.dev/banded-hexagon-408405/gauri65/auth
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "300Mi"
              cpu: "0.3"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth-app
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
