infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
        - name: client-app
          # image: gauri65/ticketingclient:latest
          image: asia-south1-docker.pkg.dev/banded-hexagon-408405/gauri65/client
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.3"
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
