infra/k8s/mongo-srv-depl-ticket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl-ticket
spec:
  selector:
    matchLabels:
      app: mongo-depl-ticket
  template:
    metadata:
      labels:
        app: mongo-depl-ticket
    spec:
      containers:
        - name: mongo-deployment-service
          image: mongo
          resources:
            limits:
              memory: "300Mi"
              cpu: "0.1"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-depl-srv-ticket
spec:
  # type: NodePort
  selector:
    app: mongo-depl-ticket
  ports:
    - port: 27017
      targetPort: 27017
