infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-app
  template:
    metadata:
      labels:
        app: ticket-app
    spec:
      containers:
        - name: ticket-app
          # image: gauri65/ticket:latest
          image: asia-south1-docker.pkg.dev/banded-hexagon-408405/gauri65/ticket
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "300Mi"
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv
spec:
  selector:
    app: ticket-app
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
